--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Nathan Howland</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="stuff/assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -47,7 +47,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/bb.jpg" alt="" /></span>
+								<span class="image main"><img src="stuff/images/bb.jpg" alt="" /></span>
 								<p>I am an aspiring full-stack back-end developer. I am currently enrolled at SFSU and taking the 9 month full-time
 									web-development course at Lambda. I live and work in San Francisco, California.
 								</p>
@@ -56,7 +56,7 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/work.jpg" alt="" /></span>
+								<span class="image main"><img src="stuff/images/work.jpg" alt="" /></span>
 								<p>My first non service sector job out of highschool was at Tesla motors, I started on the production line and after a while moved up to quality assurance where I did final inspection on components.</p>
 								<p>After Tesla, I began work in the manufacturing sector again. I was a medical device production associate at Olympus Medical. I assembled very intricate endoscopes and also refurbished older models</p>
 								<p>My last manufacturing job was at Specialized Coating Services, where I worked multiple jobs around the warehouse such as shipping & recieving, deliveries, and general manufacturing processes.</p>
@@ -66,7 +66,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/ggb.jpg" alt="" /></span>
+								<span class="image main"><img src="stuff/images/ggb.jpg" alt="" /></span>
 								<p>
 									Born in San Francisco, California. I have lived in the Bay Area most of my life. 
 									I went to high school in Fremont, California and briefly went to high school in Mesa, Arizona.
