--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 								
 								<iframe src="https://clever-lamarr-e54509.netlify.com" style="width: 100%; height: 200px;" ></iframe>
 									<p style="text-align: center;"><a href ="https://clever-lamarr-e54509.netlify.com">JavaScript Sprint Challenge</a></p>
-								
+								<iframe src="https://friendly-bose-b5a0bc.netlify.com" style="width: 100%; height: 200px;" ></iframe>
+									<p style="text-align: center;"><a href ="https://friendly-bose-b5a0bc.netlify.com">Applied JavaScript, DOM Manipulation, and Components</a></p>
 							</article>
 
 						<!-- About -->
