--- a/work/work.html
+++ b/work/work.html
@@ -2,6 +2,7 @@
     <head>
         <title>Work | Nathan Howland</title>
         <link rel="stylesheet" type="text/css" href="../CSS/index.css" />
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
         <script src="work.js" defer></script>
     </head>
 <body>
