--- a/contact/contact.html
+++ b/contact/contact.html
@@ -2,7 +2,7 @@
     <head>
         <title>Contact | Nathan Howland</title>
         <link rel="stylesheet" type="text/css" href="../CSS/index.css" />
-        <script src="about.js" defer></script>
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/a82d0d4e27.js" crossorigin="anonymous"></script>
   </head>
     </head>
