--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title>Home | Nathan Howland</title>
         <link rel="stylesheet" type="text/css" href="./CSS/index.css" />
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
     </head>
 <body>
     <header class = "header">
