--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class = "introContainer">
         <div class = "backgroundCard">
         <p class = "intro">
-            I am an aspiring full-stack back-end developer. I am currently enrolled 
+            I am an aspiring full-stack developer. I am currently enrolled 
             at SFSU and taking the 9 month full-time web-development course at Lambda. 
             I live and work in San Francisco, California. I go to school to better myself
             and secure my own future. 
