redid site for viewport

--- a/about/about.html
+++ b/about/about.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>About | Nathan Howland</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="../CSS/index.css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/a82d0d4e27.js" crossorigin="anonymous"></script>
