--- a/work/work.html
+++ b/work/work.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Work | Nathan Howland</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="../CSS/index.css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
         <script src="work.js" defer></script>
